fix(calendar): add high contrast styling for selected date

--- a/packages/components/src/calendar/Calendar.module.css
+++ b/packages/components/src/calendar/Calendar.module.css
@@ -107,6 +107,10 @@
     color: --text-on-color;
     background-color: --button-background-primary;
     border-color: --button-background-primary;
+
+    @media (forced-colors: active) {
+      background-color: highlight;
+    }
   }
 
   &.today {
